--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,4 @@
-user  www-data;
+user  nginx;
 worker_processes  1;
 
 pid run/nginx.pid;
@@ -20,15 +20,16 @@ http {
 
     server {
         listen       80;
-        server_name  localhost;
+        server_name  leden.ansfridus.nl;
 
         location /static {
-          root /srv/LedenAdministratie/static
+          alias /srv/static;
         }
 
         location / {
-          proxy_pass 127.0.0.1:8000
-          proxy_set_header Host $host;
+          proxy_pass http://127.0.0.1:8000/;
+          proxy_set_header Host $http_host;
+          proxy_redirect off;
         }
 
         # redirect server error pages to the static page /50x.html
