--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@ var/
 *.egg-info/
 .installed.cfg
 *.egg
+migrations
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
