Add settings to disable emails

--- a/settings.py.example
+++ b/settings.py.example
@@ -79,7 +79,7 @@ EMAIL_USE_TLS=True
 EMAIL_RECIPIENTS_UPDATE=['update@domain.com']
 EMAIL_RECIPIENTS_NEW=['new@domain.com']
 SEND_UPDATE_EMAILS=False
-
+SEND_NEW_EMAILS=False
 
 WSGI_APPLICATION = 'LedenAdministratie.wsgi.application'
 
