--- a/settings.py.example
+++ b/settings.py.example
@@ -68,7 +68,7 @@ AUTHENTICATION_BACKENDS = (
 
 
 LOGIN_URL = '/'
-LOGIN_REDIRECT_URL = '/ledenlijst/'
+LOGIN_REDIRECT_URL = '/members/'
 
 EMAIL_HOST="smtp.provider.com"
 EMAIL_PORT=587
