--- a/settings.py.example
+++ b/settings.py.example
@@ -73,12 +73,11 @@ EMAIL_HOST="smtp.provider.com"
 EMAIL_PORT=587
 EMAIL_HOST_USER='mailuser'
 EMAIL_HOST_PASSWORD='mailpass'
-EMAIL_SENDER='sender@list.com'
-EMAIL_USE_TLS=True
-EMAIL_RECIPIENTS_UPDATE=['update@domain.com']
-EMAIL_RECIPIENTS_NEW=['new@domain.com']
-SEND_UPDATE_EMAILS=False
-SEND_NEW_EMAILS=False
+EMAIL_SENDER = '"Mail Sender" <sender@example.nl>'
+EMAIL_USE_TLS = True
+EMAIL_BCC = ['bcc@example.nl']
+EMAIL_BACKEND = 'django.core.mail.backends.console.EmailBackend'
+
 
 WSGI_APPLICATION = 'LedenAdministratie.wsgi.application'
 
