Fix creation date on import, cookie settings

--- a/settings.py.example
+++ b/settings.py.example
@@ -130,3 +130,8 @@ STATIC_ROOT = '/srv/static'
 STATICFILES_DIRS = (
     os.path.join(BASE_DIR, "static"),
 )
+
+
+# Session and cookie settings
+SESSION_COOKIE_SECURE = True
+SESSION_EXPIRE_AT_BROWSER_CLOSE = True
