--- a/nginx.conf
+++ b/nginx.conf
@@ -25,6 +25,10 @@ http {
           alias /srv/static;
         }
 
+        location /api/v1/idp {
+          deny all;
+        }
+
         location / {
           proxy_pass http://127.0.0.1:8000/;
           proxy_set_header Host $http_host;
