Feature: send welcome e-mail when new member is created

--- a/settings.py.example
+++ b/settings.py.example
@@ -133,6 +133,7 @@ STATICFILES_DIRS = (
     os.path.join(BASE_DIR, "static"),
 )
 
+WELCOME_PDF_LOCATION = 'https://www.djoamersfoort.nl/welkom.pdf'
 
 # Session and cookie settings
 SESSION_COOKIE_SECURE = True
