--- a/settings.py.example
+++ b/settings.py.example
@@ -26,12 +26,15 @@ INSTALLED_APPS = [
     'django.contrib.messages',
     'django.contrib.staticfiles',
     'django.contrib.sites',
+    'oauth2_provider',
+    'corsheaders',
     'widget_tweaks',
     'tinymce',
     'LedenAdministratie'
 ]
 
 MIDDLEWARE = [
+    'corsheaders.middleware.CorsMiddleware',
     'django.contrib.sessions.middleware.SessionMiddleware',
     'django.middleware.common.CommonMiddleware',
     'django.middleware.csrf.CsrfViewMiddleware',
@@ -113,6 +116,7 @@ DATETIME_INPUT_FORMATS = [
 DECIMAL_SEPARATOR = ','
 USE_THOUSAND_SEPARATOR = False
 
+DATA_UPLOAD_MAX_MEMORY_SIZE = 16000000
 
 # IDP Settings
 IDP_CLIENT_ID = 'XXXX-XXXX-XXXX-XXXX'
