fix: redirect to proper page after login, depending on permissions

--- a/settings.py.example
+++ b/settings.py.example
@@ -71,7 +71,7 @@ AUTHENTICATION_BACKENDS = (
 
 
 LOGIN_URL = '/'
-LOGIN_REDIRECT_URL = '/members/'
+LOGIN_REDIRECT_URL = '/logged_in/'
 
 EMAIL_HOST="smtp.provider.com"
 EMAIL_PORT=587
