docs: add proper CORS settings

--- a/settings.py.example
+++ b/settings.py.example
@@ -139,7 +139,16 @@ STATICFILES_DIRS = (
 
 # Session and cookie settings
 SESSION_COOKIE_SECURE = True
-SESSION_EXPIRE_AT_BROWSER_CLOSE = True
+SESSION_EXPIRE_AT_BROWSER_CLOSE = False
+CORS_ALLOWED_ORIGIN_REGEXES = [
+    r"^https://\w+\.djoamersfoort\.nl$",
+]
+CORS_URLS_REGEX = r'^/(api|o)/.*$'
+
+PASSWORD_HASHERS = [
+    'django.contrib.auth.hashers.PBKDF2PasswordHasher',
+    'django.contrib.auth.hashers.BCryptPasswordHasher',
+]
 
 
 TINYMCE_INCLUDE_JQUERY=False
