--- a/LedenAdministratie/settings.py.example
+++ b/LedenAdministratie/settings.py.example
@@ -80,7 +80,7 @@ OAUTH2_PROVIDER = {
         'user/names': 'Je voornaam, achternaam en tussenvoegsels',
         'introspection': 'Allow introspection of OAuth tokens',
     },
-    'DEFAULT_SCOPES': ['user/basic']
+    'DEFAULT_SCOPES': ['user/basic'],
     'REFRESH_TOKEN_EXPIRE_SECONDS': 86400,
 }
 
@@ -92,6 +92,7 @@ EMAIL_PORT=587
 EMAIL_HOST_USER='mailuser'
 EMAIL_HOST_PASSWORD='mailpass'
 EMAIL_SENDER = '"Mail Sender" <sender@example.nl>'
+EMAIL_LANPARTY = '"Lanparty" <lanparty@example.nl>'
 EMAIL_SENDER_INVOICE = '"Invoice Sender" <invoice@example.nl>'
 EMAIL_USE_TLS = True
 EMAIL_BCC = ['bcc@example.nl']
@@ -116,7 +117,7 @@ DEFAULT_AUTO_FIELD = 'django.db.models.AutoField'
 # Internationalization
 # https://docs.djangoproject.com/en/1.8/topics/i18n/
 
-LANGUAGE_CODE = 'nl-nl'
+LANGUAGE_CODE = 'nl'
 TIME_ZONE = 'Europe/Amsterdam'
 USE_I18N = True
 USE_L10N = True
@@ -147,7 +148,7 @@ IDP_REQUIRED_ROLE = 'bestuur'
 # https://docs.djangoproject.com/en/1.8/howto/static-files/
 
 STATIC_URL = '/static/'
-STATIC_ROOT = '/srv/static'
+STATIC_ROOT = '/srv/public'
 STATICFILES_DIRS = (
     os.path.join(BASE_DIR, "static"),
 )
@@ -166,11 +167,16 @@ PASSWORD_HASHERS = [
 ]
 
 
-TINYMCE_INCLUDE_JQUERY=False
+TINYMCE_INCLUDE_JQUERY = False
 TINYMCE_DEFAULT_CONFIG = {
-    'theme': "advanced",
-    'cleanup_on_startup': True,
-    'custom_undo_redo_levels': 10,
-    'content_css': '/static/css/bootstrap.min.css'
+    "theme": "silver",
+    "height": 500,
+    "menubar": False,
+    "plugins": "advlist,autolink,lists,link,image,charmap,print,preview,anchor,"
+    "searchreplace,visualblocks,code,fullscreen,insertdatetime,media,table,paste,"
+    "code,help,wordcount",
+    "toolbar": "undo redo | formatselect | "
+    "bold italic backcolor | alignleft aligncenter "
+    "alignright alignjustify | bullist numlist outdent indent | code table "
+    "removeformat | help",
 }
-TINYMCE_COMPRESSOR=True
