chore: use a build image to speed up building and reduce image size

--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -1,4 +1,7 @@
-FROM python:3.8-alpine
+#
+# Build image to create venv
+#
+FROM python:3.8-alpine AS build
 
 # Set the file maintainer (your name - the file's author)
 MAINTAINER Ronald Moesbergen
@@ -6,18 +9,29 @@ MAINTAINER Ronald Moesbergen
 COPY requirements.txt /srv/requirements.txt
 
 RUN apk update && \
-    apk add nginx mariadb-dev zlib-dev gcc musl-dev jpeg-dev freetype-dev libffi-dev cairo-dev pango-dev ttf-dejavu cargo && \
-    pip3 install --upgrade pip && \
-    pip3 install --no-cache-dir -r /srv/requirements.txt && \
-    apk del gcc musl-dev rust cargo
+    apk add mariadb-dev zlib-dev gcc musl-dev jpeg-dev freetype-dev libffi-dev cairo-dev pango-dev cargo
+
+RUN pip3 install --upgrade pip virtualenv && \
+    virtualenv /srv/venv && source /srv/venv/bin/activate && \
+    pip3 install --no-cache-dir -r /srv/requirements.txt
+
+#
+# Runtime image
+#
+FROM python:3.8-alpine
+
+RUN apk update && \
+    apk add nginx mariadb-connector-c zlib jpeg freetype libffi pango ttf-dejavu
 
 WORKDIR /srv
-RUN mkdir public logs
-
-COPY deploy/nginx.conf /etc/nginx/nginx.conf
+RUN mkdir public logs venv
 
 # Port to expose
 EXPOSE 80
+
+# Copy venv from build image
+COPY --from=build /srv/venv /srv/venv
+COPY deploy/nginx.conf /etc/nginx/nginx.conf
 
 COPY static /srv/static
 COPY templates /srv/templates
