chore: add favicon

--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -25,6 +25,10 @@ http {
           alias /srv/public;
         }
 
+        location /favicon.ico {
+            alias /srv/public/img/favicon.png;
+        }
+
         location / {
           proxy_pass http://127.0.0.1:8000/;
           proxy_set_header Host $http_host;
