--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -32,6 +32,7 @@ http {
         location / {
           proxy_pass http://127.0.0.1:8000/;
           proxy_set_header Host $http_host;
+          proxy_read_timeout 300s;
           proxy_redirect off;
         }
     }
