--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
 Django==3.2.13
-django-cors-headers==3.7.0
+django-cors-headers==3.12.0
 django-oauth-toolkit==1.5.0
 django-tinymce==3.4.0
 django-widget-tweaks==1.4.3
+django-mailer==2.2
 gunicorn==20.1.0
-mysqlclient==2.0.3
-Pillow==9.0.1
+mysqlclient==2.1.0
+Pillow==9.1.1
 python-dateutil==2.8.2
-requests==2.26.0
-requests-oauthlib==1.3.0
-WeasyPrint==52.5
+requests==2.27.1
+requests-oauthlib==1.3.1
+weasyprint==52.5
