--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -9,9 +9,6 @@ on:
     - cron:  '0 22 1 * *'
   workflow_dispatch: {}
 
-env:
-  IMAGE_NAME: ledenadministratie
-
 jobs:
   # Push image to GitHub Packages.
   # See also https://docs.docker.com/docker-hub/builds/
@@ -22,11 +19,11 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Build image
-        run: docker build . --file deploy/Dockerfile --tag docker.pkg.github.com/${{ github.repository }}/$IMAGE_NAME:latest
+        run: docker build . --file deploy/Dockerfile --tag docker.pkg.github.com/ledenadministratie/ledenadministratie:latest
 
       - name: Log into registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
 
       - name: Push image
         run: |
-          docker push docker.pkg.github.com/${{ github.repository }}/$IMAGE_NAME:latest
+          docker push docker.pkg.github.com/ledenadministratie/ledenadministratie:latest
