--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -9,6 +9,9 @@ on:
     - cron:  '0 22 1 * *'
   workflow_dispatch: {}
 
+ENV:
+  IMAGE="ghcr.io/djoamersfoort/ledenadministratie/ledenadministratie:latest"
+
 jobs:
   # Push image to GitHub Packages.
   # See also https://docs.docker.com/docker-hub/builds/
@@ -19,11 +22,11 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Build image
-        run: docker build . --file deploy/Dockerfile --tag docker.pkg.github.com/ledenadministratie/ledenadministratie:latest
+        run: docker build . --file deploy/Dockerfile --tag "${IMAGE}"
 
       - name: Log into registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
 
       - name: Push image
         run: |
-          docker push docker.pkg.github.com/ledenadministratie/ledenadministratie:latest
+          docker push "${IMAGE}"
