--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -33,6 +33,7 @@ http {
           proxy_pass http://127.0.0.1:8000/;
           proxy_set_header Host $http_host;
           proxy_read_timeout 300s;
+    	  client_max_body_size 10m;
           proxy_redirect off;
         }
     }
