--- a/LedenAdministratie/settings.py.example
+++ b/LedenAdministratie/settings.py.example
@@ -15,6 +15,9 @@ DEBUG = True
 
 ALLOWED_HOSTS = []
 
+# Required in production for WebAuthn
+# SECURE_PROXY_SSL_HEADER = ('HTTP_X_FORWARDED_PROTO', 'https')
+
 
 # Application definition
 
@@ -99,6 +102,7 @@ LOGIN_URL = 'two_factor:login'
 LOGIN_REDIRECT_URL = '/logged_in/'
 
 TWO_FACTOR_REMEMBER_COOKIE_AGE = 30 * 24 * 3600
+TWO_FACTOR_WEBAUTHN_RP_NAME = 'DJO Amersfoort'
 
 EMAIL_HOST="smtp.provider.com"
 EMAIL_PORT=587
