--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,4 @@ requests==2.31.0
 requests-oauthlib==1.3.1
 weasyprint==58.1
 django-two-factor-auth[phonenumberslite]==1.15.1
+django-two-factor-auth[webauthn]
