--- a/LedenAdministratie/settings.py.example
+++ b/LedenAdministratie/settings.py.example
@@ -38,6 +38,7 @@ INSTALLED_APPS = [
     'django_otp.plugins.otp_static',
     'django_otp.plugins.otp_totp',
     'two_factor',
+    'two_factor.plugins.webauthn',
     'LedenAdministratie'
 ]
 
