--- a/requirements.txt
+++ b/requirements.txt
@@ -11,5 +11,4 @@ python-dateutil==2.8.2
 requests==2.31.0
 requests-oauthlib==1.3.1
 weasyprint==58.1
-django-two-factor-auth[phonenumberslite]==1.15.1
-django-two-factor-auth[webauthn]
+django-two-factor-auth[phonenumberslite,webauthn]==1.15.5
