fix: add pythonpath for pylint

--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -25,4 +25,5 @@ jobs:
       - name: Run pylint and black
         run: |
           black --check LedenAdministratie
+          export PYTHONPATH="."
           DJANGO_SETTINGS_MODULE="LedenAdministratie.settings" pylint --load-plugins=pylint_django LedenAdministratie
