fix: copy over settings.py from example

--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -25,5 +25,5 @@ jobs:
       - name: Run pylint and black
         run: |
           black --check LedenAdministratie
-          export PYTHONPATH="."
+          cp LedenAdministratie/settings.py.example LedenAdministratie/settings.py
           DJANGO_SETTINGS_MODULE="LedenAdministratie.settings" pylint --load-plugins=pylint_django LedenAdministratie
