Feat: Add support for notifications

--- a/LedenAdministratie/settings.py.example
+++ b/LedenAdministratie/settings.py.example
@@ -191,3 +191,4 @@ TINYMCE_DEFAULT_CONFIG = {
     "alignright alignjustify | bullist numlist outdent indent | code table "
     "removeformat link | help",
 }
+NOTIFICATION_ENDPOINT = None
