--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -32,3 +32,11 @@ jobs:
           context: .
           push: true
           tags: ghcr.io/djoamersfoort/ledenadministratie/ledenadministratie:latest
+
+      - name: Clean up old images
+        uses: actions/delete-package-versions@v4
+        with:
+          package-name: 'ledenadministratie/ledenadministratie'
+          package-type: 'container'
+          min-versions-to-keep: 5
+          delete-only-untagged-versions: 'true'        
