chore: upgrade to python 3.11 chore: switch to ASGI worker

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,10 @@ django-widget-tweaks==1.5.0
 django-mailer==2.3.1
 gunicorn==22.0.0
 mysqlclient==2.2.4
-Pillow==10.3.0
+pillow==10.3.0
 python-dateutil==2.9.0.post0
 requests==2.31.0
 requests-oauthlib==2.0.0
 weasyprint==61.2
 django-two-factor-auth[phonenumberslite,webauthn]==1.16.0
+uvicorn==0.29.0
